--- a/base/templates/cadastro.html
+++ b/base/templates/cadastro.html
@@ -1,47 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Site de abrigo de animais, projeto final do bootcamp da Womakers">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-
-    <!-- Fontes do Google -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css?family=Tangerine&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-
-    <title>Sociedade Patinhas Unidas</title>
-</head>
-
-<body>
-
-  <header class="header">    
-  </header>
-  
-  <main class="main">
-
-    <div class="container-fluid">
-
-      <!-- Menu de navegação -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="/">Sociedade Patinhas Unidas</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="navbar-nav">
-              <a class="nav-link" href=" ">Adote um amigo!</a>
-              <a class="nav-link" href="FAQ/">FAQ</a>
-            </div>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Pesquisar..." aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+{% extends "base_site.html" %}
+{% block content %}
+{% load static %}
 
       <!-- Formulário de Cadastro -->
       <div class="container mt-5">
@@ -66,7 +25,7 @@
             <input type="text" class="form-control" id="id_tipocasa" name="tipocasa" required>
           </div>
           <div class="mb-3">
-            <label for="id_motivoadocao" class="form-label">Por que você quer adotar um bichinho?</label>
+            <label for="id_motivoadocao" class="form-label">Qual amigo você quer adotar? Por quê?</label>
             <textarea class="form-control" id="id_motivoadocao" name="motivoadocao" rows="3" required></textarea>
           </div>
           <div class="mb-3">
@@ -81,17 +40,8 @@
 
   </main>
 
-  <footer class="footer bg-light fixed-bottom">
-    <div class="container">
-      <span class="footer_texto">
-        Projeto desenvolvido para a Womakers Code por Gabriela Ferreira 
-      </span>
-    </div>
-  </footer>
-
-  <!-- Inclua os scripts do Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  
 </body>
 
 </html>
+
+{% endblock %}
