--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -1,49 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Site de abrigo de animais, projeto final do bootcamp da Womakers">
-
-    <!-- Inclua os links do Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-
-    <!-- Fontes do Google -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css?family=Tangerine&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-
-    <title>Sociedade Patinhas Unidas</title>
-    
-</head>
-
-<body>
-
-  <header class="header">    
-  </header>
-  
-  <main class="main">
-
-    <div class="container-fluid ">
-
-      <!-- Menu de navegação -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Sociedade Patinhas Unidas</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="navbar-nav">
-              <a class="nav-link" href="cadastro/">Adote um amigo!</a>
-              <a class="nav-link" href ="FAQ/">FAQ</a>
-            </div>
-            <form class="d-flex justify">
-              <input class="form-control me-2" type="search" placeholder="Pesquisar..." aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+{% extends "base_site.html" %}
+{% block content %}
+{% load static %}
 
 <!-- Seção de Animais para Adoção -->
       <section class="mt-5">
@@ -52,31 +9,44 @@
           <p>Aenean quis sem consectetur, placerat sem in, laoreet est. Morbi ullamcorper diam turpis, ac faucibus mauris finibus quis. Aliquam cursus ante eget risus mattis, nec semper dolor convallis.</p>
 
          <!-- Menu de animais -->
-          <div class="row mt-4">
+          <div class="row mt-3">
             <!-- Primeira linha de quatro animais -->
-            <div class="col-md-3 mb-3">
-              <div class="square-crop">
-                  <img src="../static/img/manu.jpg" alt="Manu" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
-              </div>
+            <div class="col-md-4 mb-4">
+              <a href="ficha/001/" class="square-crop">
+                  <img src="../static/img/ficha001_manu.jpg" alt="Manu" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
+              </a>
             </div>
             
-            <div class="col-md-3 mb-3">
+            <div class="col-md-4 mb-4">
               <div class="square-crop">
                   <img src="../static/img/gato.jpeg" alt="Manu" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
               </div>  
             </div>
             
-            <div class="col-md-3 mb-3">
+            <div class="col-md-4 mb-4">
                 <div class="square-crop">
                    <img src="../static/img/richard.jpg" alt="Richard" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
                 </div>
             </div>
 
-            <div class="col-md-3 mb-3">
+            <!-- Segunda linha de quatro animais -->
+            <div class="col-md-4 mb-4">
+              <div class="square-crop">
+                 <img src="../static/img/toquinho.jpg" alt="Toquinho" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
+              </div>
+           </div>
+            
+            <div class="col-md-4 mb-4">
                 <div class="square-crop">
                    <img src="../static/img/toquinho.jpg" alt="Toquinho" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
                 </div>
-            </div>        
+            </div>
+
+           <div class="col-md-4 mb-4">
+                <div class="square-crop">
+                   <img src="../static/img/toquinho.jpg" alt="Toquinho" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
+                </div>
+            </div>
           </div>
         </div>
       </section>
@@ -98,16 +68,4 @@
 
   </main>
 
-  <footer class="footer bg-light fixed-bottom">
-    <div class="container">
-      <span class="footer_texto">
-        Projeto desenvolvido para a Womakers Code por Gabriela Ferreira 
-      </span>
-    </div>
-  </footer>
-
-  <!-- Inclua os scripts do Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  
-</body>
-</html>
+{% endblock %}
