modified:   base/__pycache__/admin.cpython-312.pyc modified:   base/__pycache__/models.cpython-312.pyc modified:   base/__pycache__/views.cpython-312.pyc agora admins podem ver mais modelos:   base/admin.py new file:   base/migrations/0004_animal.py new file:   base/migrations/0005_rename_animal_search.py new file:   base/migrations/0006_animal_cuidador_historicoadocao_registro_voluntario_and_more.py new file:   base/migrations/0007_alter_animal_idade.py new file:   base/migrations/0008_alter_animal_options_animal_id_ficha.py new file:   base/migrations/__pycache__/0004_animal.cpython-312.pyc new file:   base/migrations/__pycache__/0005_rename_animal_search.cpython-312.pyc new file:   base/migrations/__pycache__/0006_animal_cuidador_historicoadocao_registro_voluntario_and_more.cpython-312.pyc new file:   base/migrations/__pycache__/0007_alter_animal_idade.cpython-312.pyc migrações limpando e adicionando ao banco de dados:   base/migrations/__pycache__/0008_alter_animal_options_animal_id_ficha.cpython-312.pyc add modelos novos referentes aos animais:   base/models.py novas fotos de animais:   base/static/img/Aurora.png new file:   base/static/img/Aurora2.png new file:   base/static/img/Elvis.png Começou-se a implementar uma busca:   base/templates/base_site.html futura adição, mostra todos animais:   base/templates/ficha.html Cópia do modelo de ficha, será deletado:   base/templates/fichas_animais/ficha001_Manu copy.html Agora a ficha é ligada ao banco de dados:   base/templates/fichas_animais/ficha001_Manu.html modified:   base/templates/inicio.html modified:   base/views.py modified:   db.sqlite3 modified:   projeto_womakers/__pycache__/settings.cpython-312.pyc modified:   projeto_womakers/__pycache__/urls.cpython-312.pyc modified:   projeto_womakers/urls.py

--- a/base/templates/base_site.html
+++ b/base/templates/base_site.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="/faq/">FAQ</a>
             </div>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Pesquisar..." aria-label="Search">
+              <input class="form-control me-2" type="search" placeholder="Pesquisar..." name="search_query" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Pesquisar</button>
             </form>
           </div>
