--- a/base/templates/fichas_animais/ficha001_Manu copy.html
+++ b/base/templates/fichas_animais/ficha001_Manu copy.html
@@ -6,12 +6,12 @@
 
 <div class="container-fluid text-center">
   <div class="row-fluid">
-      <h2 class="mx-auto p-4">{{ animal.nome }}</h2>
+      <h2 class="mx-auto p-4">Manu</h2>
   </div>
 </div>
 
 <div class="text-center">
-  <img src="{% static 'img/ficha001_manu.jpg' %}" class="img-fluid" alt="{{ animal.nome }}">
+  <img src="{% static 'img/ficha001_manu.jpg' %}" class="img-fluid" alt="Manu">
 </div>
 
 <div class="container text-center mt-5">
@@ -21,23 +21,23 @@
       <tbody>
         <tr>
           <th scope="row" class="border-right pr-3">Nome</th>
-          <td>{{ animal.nome }}</td>
+          <td>Manu</td>
         </tr>
         <tr>
           <th scope="row">Espécie</th>
-          <td>{{ animal.especie }}</td>
+          <td>Cachorro</td>
         </tr>
         <tr>
           <th scope="row">Idade</th>
-          <td>{{ animal.idade }} Anos</td>
+          <td>2 Anos</td>
         </tr>
         <tr>
           <th scope="row">Raça</th>
-          <td>{{ animal.raca }}</td>
+          <td>Bichon Frisé</td>
         </tr>
         <tr>
         <th scope="row">Histórico de Saúde</th>
-        <td>{{ animal.historico_saude }}</td>
+        <td>Com todas as vacinas em dia</td>
         </tr>
       </tbody>
     </table>
@@ -47,12 +47,14 @@
 <div class="container text-center">
   <div class="row">
     <div class="col">
-      <img src="{% static 'img/ficha001_manu.jpg' %}" class="img-fluid" alt="{{ animal.nome }}">
+      <img src="{% static 'img/ficha001_manu.jpg' %}" class="img-fluid" alt="Manu">
     </div>
     <div class="col">
-      <img src="{% static 'img/ficha001_manu.jpg' %}" class="img-fluid" alt="{{ animal.nome }}">
+      <img src="{% static 'img/ficha001_manu.jpg' %}" class="img-fluid" alt="Manu">
     </div>
   </div>
 </div>
+
+
 
 {% endblock %}
