--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -38,18 +38,24 @@
             
             <div class="col-md-4 mb-4">
                 <div class="square-crop">
-                   <img src="../static/img/toquinho.jpg" alt="Toquinho" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
+                   <img src="../static/img/Aurora.png" alt="Aurora" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
                 </div>
             </div>
 
            <div class="col-md-4 mb-4">
                 <div class="square-crop">
-                   <img src="../static/img/toquinho.jpg" alt="Toquinho" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
+                   <img src="../static/img/Aurora2.png" alt="Aurora" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
                 </div>
             </div>
           </div>
         </div>
       </section>
+      
+      <div style="text-align: center;">
+        <a href="/ficha/" class="square-crop">
+          <button class="btn btn-primary" type="submit" style="width: 200px; height: 50px;">Veja mais</button>
+        </a>
+      </div>      
 
       <section class="mt-5">
         <div class="container">
