modified:   base/__pycache__/admin.cpython-312.pyc modified:   base/__pycache__/forms.cpython-312.pyc modified:   base/__pycache__/models.cpython-312.pyc modified:   base/__pycache__/views.cpython-312.pyc
upar e visualizar imagens como admin:   base/admin.py
temos um botão de busca:   base/forms.py
corrigido o historico de adoção:   base/models.py
ficha base com o bd:   base/templates/animal_detail.html
base para busca:   base/templates/animal_search.html
incluido a pesquisa funcional:   base/templates/base_site.html
Futuro Quem Somos?:   base/templates/faq.html
será apagada futuramente:   base/templates/fichas_animais/ficha001_Manu.html
Atualiza com o banco de dados:   base/templates/inicio.html
incluiu a pesquisa, apagou as fichas manuais e a página inicial dinâmica:   base/views.py
modified:   db.sqlite3
será apagado:   media/static/ficha002_chico.jpeg
modified:   projeto_womakers/__pycache__/settings.cpython-312.pyc
modified:   projeto_womakers/__pycache__/urls.cpython-312.pyc
modified:   projeto_womakers/settings.py
modified:   projeto_womakers/urls.py

--- a/base/templates/fichas_animais/ficha001_Manu.html
+++ b/base/templates/fichas_animais/ficha001_Manu.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="text-center">
-  <img src="{% static 'img/ficha001_manu.jpg' %}" class="img-fluid" alt="{{ animal.nome }}">
+  <img src="{{ animal.foto.url }}" class="img-fluid" alt="{{ animal.nome }}">
 </div>
 
 <div class="container text-center mt-5">
@@ -36,8 +36,8 @@
           <td>{{ animal.raca }}</td>
         </tr>
         <tr>
-        <th scope="row">Histórico de Saúde</th>
-        <td>{{ animal.historico_saude }}</td>
+          <th scope="row">Histórico de Saúde</th>
+          <td>{{ animal.historico_saude }}</td>
         </tr>
       </tbody>
     </table>
@@ -47,11 +47,9 @@
 <div class="container text-center">
   <div class="row">
     <div class="col">
-      <img src="{% static 'img/ficha001_manu.jpg' %}" class="img-fluid" alt="{{ animal.nome }}">
+      <img src="{{ animal.foto.url }}" class="img-fluid" alt="{{ animal.nome }}">
     </div>
-    <div class="col">
-      <img src="{% static 'img/ficha001_manu.jpg' %}" class="img-fluid" alt="{{ animal.nome }}">
-    </div>
+    <!-- Adicione mais colunas conforme necessário -->
   </div>
 </div>
 
