--- a/base/templates/animal_search.html
+++ b/base/templates/animal_search.html
@@ -1,19 +1,23 @@
-<!-- animal_search.html -->
-{% extends 'base_site.html' %}
-
+<!-- Em base/templates/animal_search.html -->
+{% extends "base_site.html" %}
 {% block content %}
-    <h2>Animal Search</h2>
-    <form method="get" action="{% url 'animal_search' %}">
-        {{ form }}
-        <button type="submit">Search</button>
+    <h2>Resultado da Busca</h2>
+    <form class="d-flex" role="search" method="get" action="{% url 'animal_search' %}">
+        {{ form.query }}
+        <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
-
     {% if animals %}
-        <h3>Search Results:</h3>
-        <ul>
+        <div class="row mt-3">
             {% for animal in animals %}
-                <li>{{ animal.nome }} - {{ animal.idade }} years old</li>
+                <div class="col-md-4 mb-4">
+                    <a href="{% url 'animal_detail' animal.id %}">
+                        <img src="{{ animal.foto.url }}" alt="{{ animal.nome }}" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
+                    </a>
+                    <p>{{ animal.nome }}</p>
+                </div>
             {% endfor %}
-        </ul>
+        </div>
+    {% else %}
+        <p>Nenhum animal encontrado.</p>
     {% endif %}
 {% endblock %}
