--- a/base/templates/base_site.html
+++ b/base/templates/base_site.html
@@ -35,9 +35,9 @@
               <a class="nav-link" href="/cadastro/">Adote um amigo!</a>
               <a class="nav-link" href="/faq/">FAQ</a>
             </div>
-            <form method="get" action="{% url 'animal_search' %}">
-              {{ form }}
-              <button type="submit">Search</button>
+            <form class="d-flex" role="search" method="get" action="{% url 'animal_search' %}">
+              {{ form.query }}
+              <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
         </div>
