--- a/base/templates/faq.html
+++ b/base/templates/faq.html
@@ -2,6 +2,16 @@
 {% block content %}
 {% load static %}
 
-<h1>Eu sou um FAQ</h1>
+<section class="mt-5">
+    <div class="container">
+      <h2>Quem Somos</h2>
+      <p>Aenean quis sem consectetur, placerat sem in, laoreet est. Morbi ullamcorper diam turpis, ac faucibus mauris finibus quis. Aliquam cursus ante eget risus mattis, nec semper dolor convallis.</p>
+  </section>
+
+  <section class="mt-5">
+    <div class="container">
+      <h2>Parceiros</h2>
+      <p>Aenean quis sem consectetur, placerat sem in, laoreet est. Morbi ullamcorper diam turpis, ac faucibus mauris finibus quis. Aliquam cursus ante eget risus mattis, nec semper dolor convallis.</p>
+  </section>
 
 {% endblock %}
