modified:   base/__pycache__/views.cpython-312.pyc new file:   base/migrations/0013_alter_historicoadocao_options.py new file:   base/migrations/__pycache__/0013_alter_historicoadocao_options.cpython-312.pyc deleted:    base/static/modelo_ficha.css uma tentativa de organizar as fichas:   base/templates/animal_detail.html o botão de pesquisa funciona:   base/templates/base_site.html o forms funciona:   base/templates/cadastro.html não é mais necessário fichas individuais:    base/templates/fichas_animais/ficha001_Manu.html deleted:    base/templates/fichas_animais/ficha002_Chico.html quis adicionar uma página de update:   base/templates/futuras_atualizacoes.html modified:   base/templates/inicio.html new file:   base/templates/modelo_ficha.html renamed:    base/templates/faq.html -> base/templates/quem_somos.html modified:   base/views.py modified:   db.sqlite3 renamed:    base/static/img/Aurora.png -> media/static/Aurora.png renamed:    base/static/img/Aurora2.png -> media/static/Aurora2.png renamed:    base/static/img/Elvis.png -> media/static/Elvis.png new file:   media/static/Nina.png renamed:    base/static/img/ficha001_manu.jpg -> media/static/ficha001_manu_d1vYFBm.jpg renamed:    base/static/img/ficha002_chico.jpeg -> media/static/ficha002_chico_w5jLrm1.jpeg renamed:    base/static/img/richard.jpg -> media/static/richard.jpg renamed:    base/static/img/toquinho.jpg -> media/static/toquinho.jpg modified:   projeto_womakers/__pycache__/urls.cpython-312.pyc modified:   projeto_womakers/urls.py

--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -4,8 +4,9 @@
 
 <section class="mt-5">
   <div class="container">
-      <h2>Animais para Adoção</h2>
-      <p>Aenean quis sem consectetur, placerat sem in, laoreet est. Morbi ullamcorper diam turpis, ac faucibus mauris finibus quis. Aliquam cursus ante eget risus mattis, nec semper dolor convallis.</p>
+      <h2>Por que adotar?</h2>
+      <p>
+        Adotar um animal de estimação é mais do que simplesmente trazer um novo companheiro para casa; é abrir as portas para uma fonte inesgotável de alegria, amor e gratificação. A experiência de ter um animal de estimação vai muito além da responsabilidade diária, transformando-se em uma jornada enriquecedora que beneficia tanto os donos quanto os animais.</p>
 
       <!-- Menu de animais -->
       <div class="row mt-3">
