--- a/base/templates/base_site.html
+++ b/base/templates/base_site.html
@@ -33,11 +33,12 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <div class="navbar-nav">
               <a class="nav-link" href="/cadastro/">Adote um amigo!</a>
-              <a class="nav-link" href="/faq/">FAQ</a>
+              <a class="nav-link" href="/quem_somos/">Quem Somos</a>
+              <a class="nav-link" href="/futuras_atualizacoes/">Futuras atualizações</a>
             </div>
             <form class="d-flex" role="search" method="get" action="{% url 'animal_search' %}">
               {{ form.query }}
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-success" type="submit">Pesquise</button>
             </form>
           </div>
         </div>
@@ -59,7 +60,6 @@
     </div>
   </footer>
 
-  <!-- Inclua os scripts do Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   
 </body>
