--- a/base/templates/cadastro.html
+++ b/base/templates/cadastro.html
@@ -2,46 +2,37 @@
 {% block content %}
 {% load static %}
 
-      <!-- Formulário de Cadastro -->
-      <div class="container mt-5">
-        <h2>Cadastre-se para Adotar um Amigo!</h2>
 
-        <form method="POST" action=" " id="form">
-          {% csrf_token %}
-          <div class="mb-3">
-            <label for="id_nome" class="form-label">Nome Completo</label>
-            <input type="text" class="form-control" id="id_nome" name="nome" required>
-          </div>
-          <div class="mb-3">
-            <label for="id_email" class="form-label">E-mail</label>
-            <input type="email" class="form-control" id="id_email" name="email" required>
-          </div>
-          <div class="mb-3">
-            <label for="id_telefone" class="form-label">Telefone</label>
-            <input type="text" class="form-control" id="id_telefone" name="telefone" required>
-          </div>
-          <div class="mb-3">
-            <label for="id_tipocasa" class="form-label">Você mora em casa ou apartamento? Possui tela?</label>
-            <input type="text" class="form-control" id="id_tipocasa" name="tipocasa" required>
-          </div>
-          <div class="mb-3">
-            <label for="id_motivoadocao" class="form-label">Qual amigo você quer adotar? Por quê?</label>
-            <textarea class="form-control" id="id_motivoadocao" name="motivoadocao" rows="3" required></textarea>
-          </div>
-          <div class="mb-3">
-            <label for="id_historico" class="form-label">Conte-nos um pouquinho sobre você, qual sua rotina e profissão.</label>
-            <textarea class="form-control" id="id_historico" name="historico" rows="3" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Cadastrar</button>
-        </form>
-      </div>
-
+<div class="container mt-5">
+  <h2>Cadastre-se para Adotar um Amigo!</h2>
+  <form method="POST" action="{% url 'cadastro' %}" id="form">
+    {% csrf_token %}
+    <div class="mb-3">
+      <label for="id_nome" class="form-label">Nome Completo</label>
+      <input type="text" class="form-control" id="id_nome" name="nome" required>
     </div>
-
-  </main>
-
-</body>
-
-</html>
+    <div class="mb-3">
+      <label for="id_email" class="form-label">E-mail</label>
+      <input type="email" class="form-control" id="id_email" name="email" required>
+    </div>
+    <div class="mb-3">
+      <label for="id_telefone" class="form-label">Telefone</label>
+      <input type="text" class="form-control" id="id_telefone" name="telefone" required>
+    </div>
+    <div class="mb-3">
+      <label for="id_tipocasa" class="form-label">Sua residência tem tela?</label>
+      <input type="text" class="form-control" id="id_tipocasa" name="tipocasa" required>
+    </div>
+    <div class="mb-3">
+      <label for="id_motivoadocao" class="form-label">Qual amigo você quer adotar? Por quê?</label>
+      <textarea class="form-control" id="id_motivoadocao" name="motivoadocao" rows="3" required></textarea>
+    </div>
+    <div class="mb-3">
+      <label for="id_historico" class="form-label">Conte-nos um pouquinho sobre você, qual sua rotina e profissão.</label>
+      <textarea class="form-control" id="id_historico" name="historico" rows="3" required></textarea>
+    </div>
+      <button type="submit" class="btn btn-primary">Cadastrar</button>
+  </form>
+</div>
 
 {% endblock %}
