--- a/base/templates/modelo_ficha.html
+++ b/base/templates/modelo_ficha.html
@@ -1,14 +1,6 @@
 {% extends "base_site.html" %}
-{% block content %}
+{% block animal_details %}
 
-<div class="container text-center">
-    <div class="row">
-      <div class="col">
-        <img src="{{ animal.foto.url }}" class="img-fluid" alt="{{ animal.nome }}">
-      </div>
-    </div>
-  </div>
-  
   <div class="container text-center mt-5">
     <div class="card-body">
       <h5 class="card-title">Ficha do Amigo</h5>
@@ -39,4 +31,11 @@
     </div>
   </div>
 
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <img src="{{ animal.foto.url }}" class="img-fluid" alt="{{ animal.nome }}">
+      </div>
+    </div>
+  </div>
 {% endblock %}
