modified:   base/__pycache__/views.cpython-312.pyc Para o visual agora temos um único style:   base/static/css/styles.css Para o fundo do site usei uma imagem de patinhas:   base/static/images/background.jpg As informações agora estão numa caixinha:   base/templates/animal_detail.html A busca agora é feita apenas aqui:   base/templates/animal_search.html adaptado para o css:   base/templates/base_site.html temos agora uma caixinha para o forms e uma mensagem de enviado:   base/templates/cadastro.html arquivo não utilizado apagado:    base/templates/ficha.html arquivo não utilizado apagado:    base/templates/futuras_atualizacoes.html As fotos agora são padronizadas:   base/templates/inicio.html arquivo não utilizado apagado::    base/templates/modelo_ficha.html futuramente contará com informações sobre o site:   base/templates/quem_somos.html modified:   base/views.py modified:   db.sqlite3 new file:   media/static/pexels-photo-3652805.jpeg new file:   media/static/pexels-photo-7752793.jpeg modified:   projeto_womakers/__pycache__/urls.cpython-312.pyc modified:   projeto_womakers/urls.py deleted:    static/ficha001_manu_RJvNwPR.jpg

--- a/base/templates/animal_detail.html
+++ b/base/templates/animal_detail.html
@@ -1,42 +1,68 @@
 {% extends "base_site.html" %}
 {% block content %}
 
-<div class="container text-center">
-    <div class="row">
+<style>
+    .square-crop {
+        overflow: hidden;
+        border: 2px solid #ddd;
+        border-radius: 10px;
+        margin-top: 50px;
+    }
+
+    .square-crop img {
+        max-width: 100%; /* Ajuste para largura responsiva */
+        max-height: 500px; /* Altura máxima de 500 pixels */
+        height: auto;
+        border-radius: 10px;
+    }
+
+    /* Adiciona regra para centralizar a imagem */
+    .image-container {
+        display: flex;
+        justify-content: center;
+    }
+
+</style>
+
+
+<div class="container text-center mt-3 image-container"> <!-- Adiciona a classe image-container aqui -->
+  <div class="row">
       <div class="col">
-        <img src="{{ animal.foto.url }}" class="img-fluid" alt="{{ animal.nome }}">
+          <a href="{% url 'animal_detail' animal_id=animal.id %}" class="square-crop">
+              <img src="{{ animal.foto.url }}" class="img-fluid" alt="{{ animal.nome }}">
+          </a>
       </div>
-    </div>
   </div>
-  
-  <div class="container text-center mt-5">
-    <div class="card-body">
+</div>
+
+<div class="container text-center mt-5 ficha-container">
+  <div class="card-body">
       <h5 class="card-title">Ficha do Amigo</h5>
       <table class="table">
-        <tbody>
-          <tr>
-            <th scope="row" class="border-right pr-3">Nome</th>
-            <td>{{ animal.nome }}</td>
-          </tr>
-          <tr>
-            <th scope="row">Espécie</th>
-            <td>{{ animal.especie }}</td>
-          </tr>
-          <tr>
-            <th scope="row">Idade</th>
-            <td>{{ animal.idade }} Anos</td>
-          </tr>
-          <tr>
-            <th scope="row">Raça</th>
-            <td>{{ animal.raca }}</td>
-          </tr>
-          <tr>
-            <th scope="row">Histórico de Saúde</th>
-            <td>{{ animal.historico_saude }}</td>
-          </tr>
-        </tbody>
+          <tbody>
+              <tr>
+                  <th scope="row" class="border-right pr-3">Nome</th>
+                  <td>{{ animal.nome }}</td>
+              </tr>
+              <tr>
+                  <th scope="row">Espécie</th>
+                  <td>{{ animal.especie }}</td>
+              </tr>
+              <tr>
+                  <th scope="row">Idade</th>
+                  <td>{{ animal.idade }} Anos</td>
+              </tr>
+              <tr>
+                  <th scope="row">Raça</th>
+                  <td>{{ animal.raca }}</td>
+              </tr>
+              <tr>
+                  <th scope="row">Histórico de Saúde</th>
+                  <td>{{ animal.historico_saude }}</td>
+              </tr>
+          </tbody>
       </table>
-    </div>
   </div>
+</div>
 
 {% endblock %}
