--- a/base/templates/quem_somos.html
+++ b/base/templates/quem_somos.html
@@ -2,16 +2,18 @@
 {% block content %}
 {% load static %}
 
-<section class="mt-5">
+<section class="mt-5 transparent-bg">
     <div class="container">
       <h2>Quem Somos</h2>
       <p>Aenean quis sem consectetur, placerat sem in, laoreet est. Morbi ullamcorper diam turpis, ac faucibus mauris finibus quis. Aliquam cursus ante eget risus mattis, nec semper dolor convallis.</p>
-  </section>
+    </div>
+</section>
 
-  <section class="mt-5">
+<section class="mt-5 transparent-bg">
     <div class="container">
       <h2>Parceiros</h2>
       <p>Aenean quis sem consectetur, placerat sem in, laoreet est. Morbi ullamcorper diam turpis, ac faucibus mauris finibus quis. Aliquam cursus ante eget risus mattis, nec semper dolor convallis.</p>
-  </section>
+    </div>
+</section>
 
 {% endblock %}
