--- a/base/templates/animal_search.html
+++ b/base/templates/animal_search.html
@@ -1,23 +1,86 @@
-<!-- Em base/templates/animal_search.html -->
-{% extends "base_site.html" %}
-{% block content %}
-    <h2>Resultado da Busca</h2>
-    <form class="d-flex" role="search" method="get" action="{% url 'animal_search' %}">
-        {{ form.query }}
-        <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-    {% if animals %}
-        <div class="row mt-3">
-            {% for animal in animals %}
-                <div class="col-md-4 mb-4">
-                    <a href="{% url 'animal_detail' animal.id %}">
-                        <img src="{{ animal.foto.url }}" alt="{{ animal.nome }}" class="img-fluid img-rounded" style="object-fit: cover; width: 100%; height: 100%;">
-                    </a>
-                    <p>{{ animal.nome }}</p>
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Site de abrigo de animais, projeto final do bootcamp da Womakers">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+
+    <!-- Fontes do Google -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+    <title>Sociedade Patinhas Unidas</title>
+</head>
+
+<body>
+
+  <header class="header">    
+  </header>
+  
+  <main class="main">
+
+    <div class="container-fluid">
+
+      <!-- Menu de navegação -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="/">Sociedade Patinhas Unidas</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="navbar-nav">
+              <a class="nav-link" href="/cadastro/">Adote um amigo!</a>
+              <a class="nav-link" href="/quem_somos/">Quem Somos</a>
+            </div>
+            <form class="d-flex ms-auto" role="search" method="get" action="{% url 'animal_search' %}">
+                <div class="ms-auto">
+                    <button class="btn btn-outline-success mr-2" type="submit">Encontre um Amigo</button>
                 </div>
-            {% endfor %}
+            </form>            
+          </div>
         </div>
-    {% else %}
-        <p>Nenhum animal encontrado.</p>
-    {% endif %}
-{% endblock %}
+      </nav>
+
+      <!-- Ferramenta de pesquisa -->
+      <div class="container mt-5">
+        <div class="search-header animal-search-container">
+            <h2>Resultado da Busca</h2>
+            <form class="d-flex mb-3" role="search" method="get" action="{% url 'animal_search' %}">
+                {{ form.query }}
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+        {% if animals %}
+            <div class="row">
+                {% for animal in animals %}
+                    <div class="col-md-4 mb-4">
+                        <div class="animal-container animal-color-{{ forloop.counter }}">
+                            <a href="{% url 'animal_detail' animal.id %}">
+                                <img src="{{ animal.foto.url }}" alt="{{ animal.nome }}" class="img-fluid" style="object-fit: cover;">
+                            </a>
+                            <p>{{ animal.nome }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% else %}
+            <p>Nenhum animal encontrado.</p>
+        {% endif %}
+    </div>  
+
+    </div>
+
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  
+</body>
+
+</html>
