--- a/base/templates/base_site.html
+++ b/base/templates/base_site.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -6,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Site de abrigo de animais, projeto final do bootcamp da Womakers">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-
-    <!-- Fontes do Google -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
     <title>Sociedade Patinhas Unidas</title>
 </head>
@@ -34,11 +36,10 @@
             <div class="navbar-nav">
               <a class="nav-link" href="/cadastro/">Adote um amigo!</a>
               <a class="nav-link" href="/quem_somos/">Quem Somos</a>
-              <a class="nav-link" href="/futuras_atualizacoes/">Futuras atualizações</a>
             </div>
-            <form class="d-flex" role="search" method="get" action="{% url 'animal_search' %}">
+            <form class="d-flex ms-auto" role="search" method="get" action="{% url 'animal_search' %}">
               {{ form.query }}
-              <button class="btn btn-outline-success" type="submit">Pesquise</button>
+              <button class="btn btn-outline-success" type="submit">Encontre um Amigo</button>
             </form>
           </div>
         </div>
@@ -46,19 +47,9 @@
     
       {%block content%}{%endblock%}
 
-      
-
     </div>
 
   </main>
-
-  <footer class="footer bg-light bottom">
-    <div class="container text-center">
-      <span class="footer_texto">
-        Projeto desenvolvido para a Womakers Code por Gabriela Ferreira 
-      </span>
-    </div>
-  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   
